--- a/index.html
+++ b/index.html
@@ -2,242 +2,16 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Simple Space Game</title>
-  <style>
-    body {
-      margin: 0;
-      background: black;
-      color: white;
-      font-family: sans-serif;
-      text-align: center;
-    }
-    #gameContainer {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      flex-direction: column;
-      gap: 10px;
-    }
-    canvas {
-      border: 1px solid #555;
-      background: radial-gradient(circle at top, #222 0%, #000 60%);
-      touch-action: none;
-    }
-    #info {
-      font-size: 14px;
-      opacity: 0.8;
-    }
-  </style>
+  <title>Space Game</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
   <div id="gameContainer">
     <canvas id="game" width="400" height="600"></canvas>
-    <div id="info">
-      Move with ◀ ▶ (or A / D).<br>
-      Dodge the rocks. If you hit one = Game Over.
-    </div>
+    <div id="info">Move with ◀ ▶ or A / D — Touch screen supported</div>
   </div>
 
-  <script>
-    const canvas = document.getElementById("game");
-    const ctx = canvas.getContext("2d");
-
-    const w = canvas.width;
-    const h = canvas.height;
-
-    // Player (spacecraft)
-    const player = {
-      x: w / 2,
-      y: h - 60,
-      width: 30,
-      height: 40,
-      speed: 5,
-      moveLeft: false,
-      moveRight: false
-    };
-
-    let rocks = [];
-    let lastRockTime = 0;
-    let rockInterval = 800; // ms between rocks
-    let gameOver = false;
-    let score = 0;
-
-    // Input (keyboard)
-    document.addEventListener("keydown", (e) => {
-      if (e.key === "ArrowLeft" || e.key === "a" || e.key === "A") {
-        player.moveLeft = true;
-      }
-      if (e.key === "ArrowRight" || e.key === "d" || e.key === "D") {
-        player.moveRight = true;
-      }
-      if (gameOver && e.key === "Enter") {
-        resetGame();
-      }
-    });
-
-    document.addEventListener("keyup", (e) => {
-      if (e.key === "ArrowLeft" || e.key === "a" || e.key === "A") {
-        player.moveLeft = false;
-      }
-      if (e.key === "ArrowRight" || e.key === "d" || e.key === "D") {
-        player.moveRight = false;
-      }
-    });
-
-    // Simple touch controls (for phone)
-    canvas.addEventListener("touchstart", handleTouch);
-    canvas.addEventListener("touchmove", handleTouch);
-    canvas.addEventListener("touchend", () => {
-      player.moveLeft = false;
-      player.moveRight = false;
-    });
-
-    function handleTouch(e) {
-      e.preventDefault();
-      const rect = canvas.getBoundingClientRect();
-      const x = e.touches[0].clientX - rect.left;
-      if (x < w / 2) {
-        player.moveLeft = true;
-        player.moveRight = false;
-      } else {
-        player.moveRight = true;
-        player.moveLeft = false;
-      }
-    }
-
-    function spawnRock() {
-      const size = 20 + Math.random() * 30;
-      rocks.push({
-        x: Math.random() * (w - size),
-        y: -size,
-        size: size,
-        speed: 2 + Math.random() * 3
-      });
-    }
-
-    function rectCircleColliding(px, py, pw, ph, cx, cy, cr) {
-      const testX = Math.max(px, Math.min(cx, px + pw));
-      const testY = Math.max(py, Math.min(cy, py + ph));
-      const distX = cx - testX;
-      const distY = cy - testY;
-      const distance = Math.sqrt(distX * distX + distY * distY);
-      return distance <= cr;
-    }
-
-    function resetGame() {
-      rocks = [];
-      score = 0;
-      gameOver = false;
-      lastRockTime = 0;
-      player.x = w / 2;
-    }
-
-    function update(delta, timestamp) {
-      if (gameOver) return;
-
-      // Player movement
-      if (player.moveLeft) {
-        player.x -= player.speed;
-      }
-      if (player.moveRight) {
-        player.x += player.speed;
-      }
-      // Clamp inside screen
-      if (player.x < 0) player.x = 0;
-      if (player.x + player.width > w) player.x = w - player.width;
-
-      // Spawn rocks
-      if (timestamp - lastRockTime > rockInterval) {
-        spawnRock();
-        lastRockTime = timestamp;
-        rockInterval = Math.max(300, rockInterval - 5); // gets a bit faster over time
-      }
-
-      // Move rocks
-      for (let i = rocks.length - 1; i >= 0; i--) {
-        const r = rocks[i];
-        r.y += r.speed;
-
-        // Check collision with player
-        if (
-          rectCircleColliding(
-            player.x,
-            player.y,
-            player.width,
-            player.height,
-            r.x + r.size / 2,
-            r.y + r.size / 2,
-            r.size / 2
-          )
-        ) {
-          gameOver = true;
-        }
-
-        // Remove rocks that go off screen
-        if (r.y > h + r.size) {
-          rocks.splice(i, 1);
-          score++;
-        }
-      }
-    }
-
-    function draw() {
-      // Space background
-      ctx.fillStyle = "black";
-      ctx.fillRect(0, 0, w, h);
-
-      // Stars
-      ctx.fillStyle = "white";
-      for (let i = 0; i < 40; i++) {
-        const sx = (i * 53) % w;
-        const sy = (i * 97) % h;
-        ctx.fillRect(sx, sy, 1, 1);
-      }
-
-      // Player ship (triangle)
-      ctx.fillStyle = "#0ff";
-      ctx.beginPath();
-      ctx.moveTo(player.x + player.width / 2, player.y);
-      ctx.lineTo(player.x, player.y + player.height);
-      ctx.lineTo(player.x + player.width, player.y + player.height);
-      ctx.closePath();
-      ctx.fill();
-
-      // Rocks (asteroids)
-      ctx.fillStyle = "#888";
-      rocks.forEach((r) => {
-        ctx.beginPath();
-        ctx.arc(r.x + r.size / 2, r.y + r.size / 2, r.size / 2, 0, Math.PI * 2);
-        ctx.fill();
-      });
-
-      // Score
-      ctx.fillStyle = "white";
-      ctx.font = "16px sans-serif";
-      ctx.fillText("Score: " + score, 10, 20);
-
-      if (gameOver) {
-        ctx.fillStyle = "red";
-        ctx.font = "24px sans-serif";
-        ctx.fillText("GAME OVER", w / 2 - 80, h / 2);
-        ctx.font = "16px sans-serif";
-        ctx.fillText("Press Enter to restart", w / 2 - 95, h / 2 + 30);
-      }
-    }
-
-    let lastTime = 0;
-    function gameLoop(timestamp) {
-      const delta = timestamp - lastTime;
-      lastTime = timestamp;
-
-      update(delta, timestamp);
-      draw();
-
-      requestAnimationFrame(gameLoop);
-    }
-
-    requestAnimationFrame(gameLoop);
-  </script>
+  <script src="game.js"></script>
 </body>
-  </html>
+</html>
